fix(fab): center fab icon on safari
Closes #146

--- a/ionic/components/button/button-fab.scss
+++ b/ionic/components/button/button-fab.scss
@@ -43,7 +43,7 @@ button,
       left: 16px;
     }
 
-    .icon {
+    icon {
       flex: 1;
     }
   }
